added autoplay on click

--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
       <h1>NORMAN</h1>
     </div>
 
-  <div class="video">
-    <a href=""><img class="video-overlay" src="images/video-overlay.png"></a>
-    <img class="video-overlay-mob" src="images/video-overlay-mob.png">
-    <iframe class="iframe-video" src="https://www.youtube.com/embed/e6l6o5KPBQA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  <div class="video" >
+    <div id="videoOverlayDesktop"><img  class="video-overlay" src="images/video-overlay.png"></div>
+    <div id="videoOverlayMobile"><img class="video-overlay-mob" src="images/video-overlay-mob.png"></div>
+    <iframe id="iframeID" class="iframe-video" src="https://www.youtube.com/embed/e6l6o5KPBQA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </div>
 
 
@@ -35,5 +35,7 @@
   </section>
 
 </body>
+
+<script type="text/javascript" src="script.js"></script>
 
 </html>
