--- a/index.html
+++ b/index.html
@@ -1,10 +1,20 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-159125879-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-159125879-1');
+    </script>
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content=""/>
+    <meta property=”og:description” content="Norman mixtape out now" />
+    <meta property=”og:image” content="images/seo/richLink.jpg"/>
     <title>Norman</title>
     <link rel="stylesheet" href="https://use.typekit.net/hiq4bhi.css">
     <link rel="stylesheet" href="stylesheet.css">
