--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta property=”og:description” content="Norman mixtape out now" />
     <meta property=”og:image” content="images/seo/richLink.jpg"/>
+    <link rel="icon" href="images/favicon.png" sizes="32x32">
     <title>Norman</title>
     <link rel="stylesheet" href="https://use.typekit.net/hiq4bhi.css">
     <link rel="stylesheet" href="stylesheet.css">
