added twitter meta tag

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta property=”og:description” content="Norman mixtape out now!" />
-    <meta property="og:image" content="https://raw.githubusercontent.com/bencross95/Norman/master/images/seo/richLink.jpg">
+    <meta content="https://raw.githubusercontent.com/bencross95/Norman/master/images/seo/richLink.jpg" property="og:image">
+    <meta content="summary" name="twitter:card">
     <link rel="icon" href="images/favicon.png" sizes="32x32">
     <title>Norman</title>
     <link rel="stylesheet" href="https://use.typekit.net/hiq4bhi.css">
