lice tour dates

--- a/index.html
+++ b/index.html
@@ -39,6 +39,68 @@
   </div>
 
 
+<div>
+
+<h3>TOUR WITH LICE</h3>
+
+  <table class="date-table">
+  <tr>
+    <td><p>10/03</p></td>
+    <td><p>Hyde Park Book Club, Leeds</p></td>
+  </tr>
+
+  <tr>
+    <td><p>11/03</p></td>
+    <td><p>The Hug & Pint, Glasgow</p></td>
+  </tr>
+
+  <tr>
+    <td><p>12/03</p></td>
+    <td><p>The Castle Hotel, Manchester</p></td>
+  </tr>
+
+  <tr>
+    <td><p>13/03</p></td>
+    <td><p>The Cluny, Newcastle</p></td>
+  </tr>
+
+  <tr>
+    <td><p>25/03</p></td>
+    <td><p>The Lexington, London w/ Egyptian Blue</p></td>
+  </tr>
+
+  <tr>
+    <td><p>28/03</p></td>
+    <td><p>Ritual Union Festival, Bristol</p></td>
+  </tr>
+
+  <tr>
+    <td><p>04/04</p></td>
+    <td><p>Bird On The Wire All-Dayer</p></td>
+  </tr>
+
+  <tr>
+    <td><p>18/04</p></td>
+    <td><p>The Old England, Bristol (Mixtape Launch)</p></td>
+  </tr>
+
+  <tr>
+    <td><p>02/05</p></td>
+    <td><p>Portsmouth Psyched Festival</p></td>
+  </tr>
+
+  <tr>
+    <td><p>08/05</p></td>
+    <td><p>Brudenell Social Club, Leeds w/ Bambara</p></td>
+  </tr>
+
+  <tr>
+    <td><p>15–16/05</p></td>
+    <td><p>The Great Escape Festival, Brighton</p></td>
+  </tr>
+
+</table>
+</div>
 
     <div>
     <p><a href="https://www.instagram.com/norman_band/" target="_blank">Instagram</a>&emsp;&emsp;<a href="https://www.facebook.com/normanbandbristol/" target="_blank">Facebook</a></p>
