corrected tour dates with LICE

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
 <div>
 
-<h3>TOUR WITH LICE</h3>
+<h3>TOUR</h3>
 
   <table class="date-table">
   <tr>
@@ -66,37 +66,37 @@
 
   <tr>
     <td><p>25/03</p></td>
-    <td><p>The Lexington, London w/ Egyptian Blue</p></td>
+    <td><p>The Lexington, London w/ Egyptian Blue & LICE</p></td>
   </tr>
 
   <tr>
     <td><p>28/03</p></td>
-    <td><p>Ritual Union Festival, Bristol</p></td>
+    <td><p>Ritual Union Festival, Bristol w/ LICE</p></td>
   </tr>
 
   <tr>
     <td><p>04/04</p></td>
-    <td><p>Bird On The Wire All-Dayer</p></td>
+    <td><p>Bird On The Wire All-Dayer w/ LICE</p></td>
   </tr>
 
   <tr>
     <td><p>18/04</p></td>
-    <td><p>The Old England, Bristol (Mixtape Launch)</p></td>
+    <td><p>The Old England, Bristol (Mixtape Launch) w/ LICE</p></td>
   </tr>
 
   <tr>
     <td><p>02/05</p></td>
-    <td><p>Portsmouth Psyched Festival</p></td>
+    <td><p>Portsmouth Psyched Festival w/ LICE</p></td>
   </tr>
 
   <tr>
     <td><p>08/05</p></td>
-    <td><p>Brudenell Social Club, Leeds w/ Bambara</p></td>
+    <td><p>Brudenell Social Club, Leeds w/ Bambara & LICE</p></td>
   </tr>
 
   <tr>
     <td><p>15–16/05</p></td>
-    <td><p>The Great Escape Festival, Brighton</p></td>
+    <td><p>The Great Escape Festival, Brighton w/ LICE</p></td>
   </tr>
 
 </table>
