updated tour dates from google doc

--- a/index.html
+++ b/index.html
@@ -46,59 +46,63 @@
   <table class="date-table">
   <tr>
     <td><p>10/03</p></td>
-    <td><p>Hyde Park Book Club, Leeds</p></td>
+    <td><p>Hyde Park Book Club, Leeds w/ LICE</p></td>
   </tr>
 
   <tr>
     <td><p>11/03</p></td>
-    <td><p>The Hug & Pint, Glasgow</p></td>
+    <td><p>The Hug & Pint, Glasgow w/ LICE</p></td>
   </tr>
 
   <tr>
     <td><p>12/03</p></td>
-    <td><p>The Castle Hotel, Manchester</p></td>
+    <td><p>The Castle Hotel, Manchester w/ LICE</p></td>
   </tr>
 
   <tr>
     <td><p>13/03</p></td>
-    <td><p>The Cluny, Newcastle</p></td>
+    <td><p>The Cluny, Newcastle w/ LICE</p></td>
   </tr>
 
   <tr>
     <td><p>25/03</p></td>
-    <td><p>The Lexington, London w/ Egyptian Blue & LICE</p></td>
+    <td><p>The Lexington, London w/ Egyptian Blue</p></td>
   </tr>
 
   <tr>
     <td><p>28/03</p></td>
-    <td><p>Ritual Union Festival, Bristol w/ LICE</p></td>
+    <td><p>Ritual Union Festival, Bristol</p></td>
   </tr>
 
   <tr>
     <td><p>04/04</p></td>
-    <td><p>Bird On The Wire All-Dayer w/ LICE</p></td>
+    <td><p>Bird On The Wire All-Dayer, London</p></td>
   </tr>
 
   <tr>
     <td><p>18/04</p></td>
-    <td><p>The Old England, Bristol (Mixtape Launch) w/ LICE</p></td>
+    <td><p>The Old England, Bristol (Mixtape Launch)</p></td>
   </tr>
 
   <tr>
     <td><p>02/05</p></td>
-    <td><p>Portsmouth Psyched Festival w/ LICE</p></td>
+    <td><p>Portsmouth Psyched Festival, Portsmouth</p></td>
   </tr>
 
   <tr>
     <td><p>08/05</p></td>
-    <td><p>Brudenell Social Club, Leeds w/ Bambara & LICE</p></td>
+    <td><p>Brudenell Social Club, Leeds w/ Bambara</p></td>
   </tr>
 
   <tr>
     <td><p>15–16/05</p></td>
-    <td><p>The Great Escape Festival, Brighton w/ LICE</p></td>
+    <td><p>The Great Escape Festival, Brighton</p></td>
   </tr>
 
+  <tr>
+    <td><p>03–06/09</p></td>
+    <td><p>End of the Road Festival, Dorset</p></td>
+  </tr>
 </table>
 </div>
 
