added space after social links and changed video embed link

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   <div class="video" >
     <div id="videoOverlayDesktop"><img  class="video-overlay" src="images/video-overlay.png"></div>
     <div id="videoOverlayMobile"><img class="video-overlay-mob" src="images/video-overlay-mob.png"></div>
-    <iframe id="iframeID" class="iframe-video" src="https://www.youtube.com/embed/i84GgE0meV0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <iframe id="iframeID" class="iframe-video" src="https://www.youtube.com/embed/raMux__Iv5w" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </div>
 
 
@@ -106,10 +106,9 @@
 </table>
 </div>
 
-    <div>
-    <p><a href="https://www.instagram.com/norman_band/" target="_blank">Instagram</a>&emsp;&emsp;<a href="https://www.facebook.com/normanbandbristol/" target="_blank">Facebook</a></p>
-
-    </div>
+<div class="social-link">
+<p><a href="https://www.instagram.com/norman_band/" target="_blank">Instagram</a>&emsp;&emsp;<a href="https://www.facebook.com/normanbandbristol/" target="_blank">Facebook</a></p>
+</div>
 
   </section>
 
