added bancamp embed and link

--- a/index.html
+++ b/index.html
@@ -106,8 +106,10 @@
 </table>
 </div>
 
+<iframe style="border: 0; width: 100%; height: 42px;" src="https://bandcamp.com/EmbeddedPlayer/track=2552737527/size=small/bgcol=ffffff/linkcol=0687f5/transparent=true/" seamless><a href="http://normanbristol.bandcamp.com/track/mixtape-vol-1-songs-from-the-basement-the-old-england-etc">MIXTAPE Vol. 1 (Songs from the basement, The Old England etc.) by Norman</a></iframe>
+
 <div class="social-link">
-<p><a href="https://www.instagram.com/norman_band/" target="_blank">Instagram</a>&emsp;&emsp;<a href="https://www.facebook.com/normanbandbristol/" target="_blank">Facebook</a></p>
+<p><a href="https://www.instagram.com/norman_band/" target="_blank">Instagram</a>&emsp;&emsp;<a href="https://www.facebook.com/normanbandbristol/" target="_blank">Facebook</a>&emsp;&emsp;<a href="https://normanbristol.bandcamp.com/releases" target="_blank">Bandcamp</a></p>
 </div>
 
   </section>
