added covid message and added extra padding to table

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   </div>
 
 
-<div>
+<div class="liveDates">
 
 <h3>LIVE DATES</h3>
 
@@ -104,7 +104,9 @@
     <td><p>End of the Road Festival, Dorset</p></td>
   </tr>
 </table>
+<p>(Dates subject to change due to Covid-19)</p>
 </div>
+
 
 <iframe style="border: 0; width: 100%; height: 42px;" src="https://bandcamp.com/EmbeddedPlayer/track=2552737527/size=small/bgcol=ffffff/linkcol=0687f5/transparent=true/" seamless><a href="http://normanbristol.bandcamp.com/track/mixtape-vol-1-songs-from-the-basement-the-old-england-etc">MIXTAPE Vol. 1 (Songs from the basement, The Old England etc.) by Norman</a></iframe>
 
