--- a/index.html
+++ b/index.html
@@ -107,9 +107,13 @@
 <p>(Dates subject to change due to Covid-19)</p>
 </div>
 
+<hr class="">
 
-<iframe style="border: 0; width: 100%; height: 42px;" src="https://bandcamp.com/EmbeddedPlayer/track=2552737527/size=small/bgcol=ffffff/linkcol=0687f5/transparent=true/" seamless><a href="http://normanbristol.bandcamp.com/track/mixtape-vol-1-songs-from-the-basement-the-old-england-etc">MIXTAPE Vol. 1 (Songs from the basement, The Old England etc.) by Norman</a></iframe>
+<div >
+  <img class="cassetteImage" src="images/normanCassette.jpg" alt="">
+</div>
 
+<iframe style="border: 0; width: 100%; height: 120px;" src="https://bandcamp.com/EmbeddedPlayer/album=2032510313/size=large/bgcol=ffffff/linkcol=0687f5/tracklist=false/artwork=small/transparent=true/" seamless><a href="http://normanbristol.bandcamp.com/album/mixtape-vol-1">MIXTAPE Vol. 1 by Norman</a></iframe>
 <div class="social-link">
 <p><a href="https://www.instagram.com/norman_band/" target="_blank">Instagram</a>&emsp;&emsp;<a href="https://www.facebook.com/normanbandbristol/" target="_blank">Facebook</a>&emsp;&emsp;<a href="https://normanbristol.bandcamp.com/releases" target="_blank">Bandcamp</a></p>
 </div>
